app/assets/stylesheets/screen.scss
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent:
 * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

@import "compass/reset";
@import "compass/utilities/general/clearfix";
@import "960/grid";

$alchemy_blue: #C7E4F5;
$anthrazit: darken($alchemy_blue, 80);
$anthrazit_light: lighten($anthrazit, 10);
$alchemy_dark_blue: darken($alchemy_blue, 50);
$alchemy_green: #87AC59;

@mixin opacity($strength) {
	opacity: $strength;
	filter: alpha(opacity = $strength*100);
}

@mixin border-radius($radius) {
	-webkit-border-radius: $radius;
	-khtml-border-radius: $radius;
	-o-border-radius: $radius;
	-moz-border-radius: $radius;
	border-radius: $radius;
}

@mixin drop-shadow($depth) {
	box-shadow: #ccc 0px 0px $depth;
	-o-box-shadow: #ccc 0px 0px $depth;
	-ms-box-shadow: #ccc 0px 0px $depth;
	-moz-box-shadow: #ccc 0px 0px $depth;
	-webkit-box-shadow: #ccc 0px 0px $depth;
}

@font-face {
    font-family: 'AngelinaRegular';
    src: url('/fonts/angelina-webfont.eot');
    src: url('/fonts/angelina-webfont.eot?#iefix') format('embedded-opentype'),
         url('/fonts/angelina-webfont.woff') format('woff'),
         url('/fonts/angelina-webfont.ttf') format('truetype'),
         url('/fonts/angelina-webfont.svg#AngelinaRegular') format('svg');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'JunctionRegular';
    src: url('/fonts/junction_02-webfont.eot');
    src: url('/fonts/junction_02-webfont.eot?#iefix') format('embedded-opentype'),
         url('/fonts/junction_02-webfont.woff') format('woff'),
         url('/fonts/junction_02-webfont.ttf') format('truetype'),
         url('/fonts/junction_02-webfont.svg#JunctionRegular') format('svg');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'SansusWebissimoRegular';
    src: url('/fonts/sansus_webissimo-regular-webfont.eot');
    src: url('/fonts/sansus_webissimo-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('/fonts/sansus_webissimo-regular-webfont.woff') format('woff'),
         url('/fonts/sansus_webissimo-regular-webfont.ttf') format('truetype'),
         url('/fonts/sansus_webissimo-regular-webfont.svg#SansusWebissimoRegular') format('svg');
    font-weight: normal;
    font-style: normal;

}

.container {
  @include grid-system(12);
  @include clearfix;
  @include grid-children;
}

body {
	background: $anthrazit;
	color: $anthrazit;
	margin: 0;
	font: 12px/18px "JunctionRegular", Helvetica, Arial, sans-serif;
	background-image: -moz-radial-gradient(50% 25em, circle cover, $anthrazit_light, $anthrazit 60%);
	background-image: -webkit-radial-gradient(50% 25em, circle cover, $anthrazit_light, $anthrazit 60%);
	background-image: -o-radial-gradient(50% 25em, circle cover, $anthrazit_light, $anthrazit 60%);
	background-image: -ms-radial-gradient(50% 25em, circle cover, $anthrazit_light, $anthrazit 60%);
	background-image: radial-gradient(50% 25em, circle cover, $anthrazit_light, $anthrazit 60%);
}

a {
	color: $alchemy_blue;
	text-decoration: underline;
}

a:hover {
	color: $alchemy_green;
	text-decoration: none;
}

img {
	border: 0 none;
}

h1, h2 {
	font: normal normal 24px "SansusWebissimoRegular", Helvetica, Arial, sans-serif;
	color: $alchemy_green;
	letter-spacing: 1px;
	padding-top: 0;
	margin-top: 0;
	margin-bottom: 1em;
}

h2 {
	font-size: 18px;
	letter-spacing: 1px;
	text-transform: none;
	margin-top: 20px;
}

code {
	font: 12px Menlo, Monaco, mono;
	background-color: #F4F4F4;
}

pre {
	background: $anthrazit;
	color: #eed785;
	padding: 1em;
	font: 12px/1.5em Menlo, Monaco, mono;
	text-align: left;
	overflow-x: auto;
	overflow-y: none;
}

#forkme {
	position: absolute;
	top: 0px;
	right: 0;
	background: url('forkme.png') top right no-repeat;
	width: 149px;
	height: 149px;
	z-index: 9999999;
}

#content p, #content li {
  margin-top: 0;
  margin-bottom: 0.75em;
}

#header {
	background: $alchemy_blue;
	color: #FFF;
	font: 14px normal "SansusWebissimoRegular", Helvetica, Arial, sans-serif;
	margin: 0;
	position: relative;
	top: 0;
	left: 0;
	border-bottom: 4px solid $alchemy_dark_blue;
}

#header #scroll_navi {
	height: 8px;
	padding: 13px 0;
	position: absolute;
	top: 90px;
	left: -480px;
	margin-left: 50%;
	width: 960px;
	background: transparentize($alchemy_blue, 0.05);
	z-index: 1000;
	outline: 8px solid transparentize($alchemy_blue, 0.05);
}

#header .container {
	height: 135px;
	padding: 0px;
	overflow: visible;
}

#language_select {
	text-align: right;
	text-transform: uppercase;
	margin-top: -3px;
}

#language_select a {
	text-decoration: none;
	padding: 5px 7px;
	@include border-radius(4px);
	color: $anthrazit;
	border: 1px solid transparent;
}

#language_select a:hover {
	border: 1px solid $alchemy_dark_blue;
}

#language_select a.active {
	color: $alchemy_green;
	border: 1px solid $alchemy_green;
	background: transparent;
}

#logo {
	background: transparent;
	display: block;
	width: 300px;
	height: 91px;
	padding: 0;
	margin: 6px 0;
}

#logo img {
	margin-left: -10px;
}

#main_navigation {
	position: relative;
	top: 0;
	left: 0;
	padding: 0px;
}

#main_navigation ul {
	margin: 0;
	padding: 0;
	list-style-type: none;
	position: relative;
	height: inherit;
	line-height: 0;
}

#main_navigation ul li {
	position: relative;
	float: left;
	margin-right: 20px;
	list-style-image: none;
}

#main_navigation ul li a:hover {
	color: $alchemy_dark_blue;
}

#main_navigation ul li a.active {
	color: $alchemy_green;
}

#main_navigation ul li a {
	padding: 5px 20px 10px 0;
	position: relative;
	left: 0;
	top: 0;
	display: block;
	font-size: 18px;
	text-decoration: none;
	color: $anthrazit;
	letter-spacing: 1px;
	text-transform: uppercase;
	font-family: "SansusWebissimoRegular", Helvetica, Arial, sans-serif;
}

#main_navigation ul li.last {
	margin-right: 0px;
}

div#bubbles {
	width: 500px;
	height: 631px;
	background: url('big_bubbles.png') no-repeat center;
	position: absolute;
	z-index: 0;
	right: -400px;
	margin-right: 50%;
	top: 160px;
	@include opacity(0.05);
}

#slide_gallery_container {
	position: relative;
	top: 0;
	left: 0;
	height: 320px;
}

#slide_gallery {
	position: relative;
	left: 0;
	top: 0px;
	margin: 0;
	padding: 0;
	background-color: transparentize($alchemy_blue, 0.95);
}

#slide_gallery_container #pager {
	position: absolute;
	bottom: 2em;
	right: 20px;
	text-align: right;
	z-index: 10;
}

#slide_gallery_container #pager a {
	margin-left: 10px;
	padding: 10px;
	background-color: $alchemy_blue;
	@include border-radius(20px);
	width: 20px;
	height: 20px;
	display: inline-block;
	text-align: center;
	color: $anthrazit_light;
	text-decoration: none;
	font: 24px/18px SansusWebissimoRegular, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
}

#slide_gallery_container #pager a.activeSlide {
	background-color: $anthrazit;
	color: $alchemy_blue;
}

#slide_gallery .slide {
	position: relative;
	top: 0;
	left: 0;
	height: 320px;
	width: 960px;
	margin: 0;
}

#slide_gallery .slide h1,
#slide_gallery .slide h2 {
	position:  absolute;
	right: 10px;
	top: 1em;
	text-transform: uppercase;
	color: $alchemy_green;
	font-size: 74px;
}

#slide_gallery .slide h2 {
	top: 0.5em;
	font: 28px JunctionRegular;
	text-transform: none;
}

#content {
	position: relative;
	top: 0;
  left: 0;
	padding-bottom: 110px;
	padding-top: 70px;
	overflow: auto;
	min-height: 300px;
	color: $alchemy_blue;
}

/* Gallery */
.gallery {
	width: 920px;
	background: transparent;
	overflow: hidden;
	
	.gallery_image {
		float: left;
		margin: 0 10px 10px 0;
		position: relative;
		font-size: 0;
		
		.image_caption {
			color: #a3a3a5;
			font-size: 11px;
			height: 18px;
			overflow: hidden;
			position: absolute;
			bottom: 0;
			left: 0;
			width: 100%;
			background-color: #33393f;
			text-align: center;
			padding-top: 2px;
			padding-bottom: 3px;
			opacity: 0.9;
		}
		
		img, a {
			display: block;
		}
	}
}
/* Gallery end */

#footer {
	background: transparentize($anthrazit, 0.5);
	color: $alchemy_blue;
	padding-top: 40px;
	padding-bottom: 60px;
	position: relative;
	top: 0;
	left: 0;
	z-index: 1;
	
	p {
		margin: 0;
		margin-bottom: 1em;
	}
}

div.addthis_toolbox {
	float: left;
	margin-right: 5px;
	width: 80px;
}

/* @group Info Table */

div.info_table {
  background-color: transparentize($anthrazit_light, 0.2);
	@include border-radius(8px);
	border: 1px solid $anthrazit;
	-webkit-box-shadow: inset 1px 1px 25px $alchemy_blue;
	-moz-box-shadow: inset 1px 1px 25px $alchemy_blue;
	-o-box-shadow: inset 1px 1px 25px $alchemy_blue;
	-box-shadow: inset 1px 1px 25px $alchemy_blue;
	padding: 30px;
}

div#content div.info_table div.content ul {
	padding: 0;
	margin: 0px;
	list-style: none;
}

div#content div.info_table div.content ul li {
	background: image-url('checkmark.png') no-repeat 350px center;
	/* border-bottom: 1px solid $alchemy_blue; */
	margin-bottom: 12px;
	padding: 15px 80px 15px 12px;
}

div#content div.info_table div.content ul li {
	background-color: darken($anthrazit_light, 1);
	-webkit-box-shadow: inset 1px 1px 6px $anthrazit;
	-moz-box-shadow: inset 1px 1px 6px $anthrazit;
	-o-box-shadow: inset 1px 1px 6px $anthrazit;
	-box-shadow: inset 1px 1px 6px $anthrazit;
	border-bottom: 0 none;
	@include border-radius(8px);
}

div#content div.info_table div.content ul li:last-child {
	border-bottom: 0 none;
}

div#content div.info_table div.content.features ul li {
	font-size: 10px;	
}

div#content div.info_table div.content.features ul li strong {
	font-size: 12px;	
}

#google_group .entries {
	margin-top: 2em;
}

#google_group .title {
	font-weight: bold;
}

#google_group .entry {
	padding-bottom: 1em;
	border-bottom: 1px solid #d6e2ea;
	margin-bottom: 1em;
}

#google_group .entry_footer {
	font-size: 10px;
	font-style: italic;
}


#google_group .entry_footer .url {
	float: right;
	font-style: normal;
	padding: 2px;
}

/* @end */

.screenshot_image img {
	@include drop-shadow(5px);
}

